src/objects/quarterCallMapping__c.object
<CustomObject>
    <description>Used to specify list of values for TOR area field to quarter call when reconciling a TOT and Tract record</description>
    <fields>
        <fullName>area__c</fullName>
        <label>Area</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>quarterCall__c</fullName>
        <label>Quarter Call</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>titleIntegrationJob__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to title projecting job</description>
        <label>Title Integration Job</label>
        <referenceTo>TitleIntegrationJob__c</referenceTo>
        <relationshipLabel>Quarter Call Mappings</relationshipLabel>
        <relationshipName>QuarterCallMappings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>titleProcessingJob__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to title projecting job</description>
        <label>Title Processing Job</label>
        <referenceTo>TitleIntegrationJob__c</referenceTo>
        <relationshipLabel>Quarter Call Mapping</relationshipLabel>
        <relationshipName>Quarter_Call_Mapping</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Quarter Call Mapping</label>
    <nameField>
        <label>Quarter Call Mapping</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quarter Call Mapping</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>